--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@ body {
     --secondary-foreground: 240 5.9% 10%;
     --muted: 212, 5%, 47%;
     --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
+    --accent: 236, 100%, 78%;
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
